--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
     "name": "ae-tsx-runner",
-    "displayName": "AE jsx && tsx Runner",
-    "description": "Run Adobe After Effects .jsx or .tsx Script without ExtendScript Toolkit.",
-    "version": "0.2.0",
+    "displayName": "Adobe AE jsx && tsx Runner",
+    "description": "Run Adobe After Effects jsx or tsx Script without ExtendScript Toolkit.",
+    "version": "0.3.0",
     "publisher": "yuelili",
     "repository": {
         "type": "git",
         "url": "https://github.com/Yuelioi/vscode-ae-script-tsx-linker.git"
     },
     "engines": {
-        "vscode": "^1.75.0"
+        "vscode": "^1.75.1"
     },
     "categories": [
         "Other"
