--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "outFiles": [
                 "${workspaceFolder}/dist/**/*.js"
             ],
-            // "preLaunchTask": "${defaultBuildTask}"
+            "preLaunchTask": "tasks: watch-tests"
         },
         {
             "name": "Extension Tests",
