--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "ae-tsx-runner",
     "displayName": "Adobe AE jsx && tsx Runner",
     "description": "Run Adobe After Effects jsx or tsx Script without ExtendScript Toolkit.",
-    "version": "0.5.1",
+    "version": "0.6.0",
     "publisher": "yuelili",
     "repository": {
         "type": "git",
@@ -67,6 +67,7 @@
         "compile": "webpack",
         "watch": "webpack --watch",
         "package": "webpack --mode production --devtool hidden-source-map",
+        "package2": "vsce package",
         "publish": "vsce publish",
         "compile-tests": "tsc -p . --outDir out",
         "watch-tests": "tsc -p . -w --outDir out",
