--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off",
-    "hide-files.files": []
+    "hide-files.files": [],
+    "tsxRunner": {
+        "hostSpecifier": "123"
+    }
 }
