--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,25 @@
-// Place your settings in this file to overwrite default and user settings.
 {
-    "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
-        "**/Thumbs.db": true,
-        "out": true,
-        "dist": true
-    },
-    "search.exclude": {
-        "out": true, // set this to false to include "out" folder in search results
-        "dist": true // set this to false to include "dist" folder in search results
-    },
-    // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
-    "typescript.tsc.autoDetect": "off",
-    "hide-files.files": [],
-    "tsxRunner": {
-        "hostSpecifier": "123"
-    }
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "out": true,
+    "dist": true
+  },
+  "search.exclude": {
+    "out": true,
+    "dist": true
+  },
+  "typescript.tsc.autoDetect": "off",
+  "hide-files.files": [],
+  "tsxRunner": {
+    "hostSpecifier": "123"
+  },
+  "ae-tsx-runner": {
+    "input": "dist/index.tsx",
+    "output": "dist/index.jsx"
+  }
 }
