--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,36 +1,21 @@
 // A launch configuration that compiles the extension and then opens it inside a new window
 // Use IntelliSense to learn about possible attributes.
 // Hover to view descriptions of existing attributes.
-// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-{
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Run Extension",
-            "type": "extensionHost",
-            "request": "launch",
-            "args": [
-                "--extensionDevelopmentPath=${workspaceFolder}",
-                "--disable-extensions" // 调试时关闭其他拓展
-            ],
-            "outFiles": [
-                "${workspaceFolder}/dist/**/*.js"
-            ],
-            "preLaunchTask": "tasks: watch-tests"
-        },
-        {
-            "name": "Extension Tests",
-            "type": "extensionHost",
-            "request": "launch",
-            "args": [
-                "--extensionDevelopmentPath=${workspaceFolder}",
-                "--extensionTestsPath=${workspaceFolder}/out/test/suite/index"
-            ],
-            "outFiles": [
-                "${workspaceFolder}/out/**/*.js",
-                "${workspaceFolder}/dist/**/*.js"
-            ],
-            "preLaunchTask": "tasks: watch-tests"
-        }
-    ]
+// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387{
+"version": "0.2.0",
+"configurations": [
+  {
+    "name": "Extension Debug",
+    "type": "extensionHost",
+    "request": "launch",
+    "args": [
+      "--extensionDevelopmentPath=${workspaceFolder}",
+      "--disable-extensions" // 调试时关闭其他拓展
+    ],
+    "outFiles": [
+      "${workspaceFolder}/dist/**/*.js"
+    ],
+    "preLaunchTask": "tasks: watch-tests"
+  }
+]
 }
